<resources>


    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>
    <string name="item_inicio">Inicio</string>
    <string name="item_cuenta">Mi Cuenta</string>
    <string name="item_categorias">Productos</string>
    <string name="item_configuracion">Configuración</string>
    <string name="titulo_comidas_populares">Maquinas</string>
    <string name="titulo_tab_platillos">COMBOS</string>
    <string name="titulo_tab_bebidas">PIQUEOS</string>
    <string name="titulo_tab_postres">POSTRES</string>
    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_direcciones">ZONAS</string>
    <string name="titulo_tab_tarjetas">TARJETAS</string>
    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>
    <string name="etiqueta_carrito">Carrito</string>
    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>

    <string name="app_name">AppAtencionPedidos</string>

    <string name="app_icon_texto">Cortesias PJ</string>

    <string name="titulo_actividad_configuracion">Configuración</string>
    <string name="categoria_notificaciones">Notificaciones</string>
    <string name="titulo_preferencia">Frecuencia de notificaciones por correo</string>
    <string name="key_preferencia">lista_frecuencias</string>
    <string-array name="lista_frecuencia">
        <item>Un correo diario</item>
        <item>Un correo a la semana</item>
        <item>Un correo al mes</item>
        <item>No quiero recibir correos</item>
    </string-array>
    <string-array name="lista_valores_frecuencia">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Login</string>
    <string name="texto_carrito_vacio">carrito vacio</string>
    <string name="item_pedidos">Pedidos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_cerrarsesion">Salir</string>
    <string name="item_productos">items</string>
    <string name="sin_registro">sin registros</string>
    <string name="password">\@dm1nPJ</string>
    <string name="item_remover">Remover</string>
    <string name="login_titulo_atencion">Atención de Pedidos</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="continuar_texto">Continuar</string>


    <string-array name="stepLabels">
        <item>Approval</item>
        <item>Processed</item>
        <item>Shipped</item>
        <item>Delivery</item>
    </string-array>
</resources>
