<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:checked="true"
            android:icon="@drawable/inicio"
            android:title="@string/item_inicio" />
        <item
            android:id="@+id/item_cuenta"
            android:icon="@drawable/cuenta"
            android:title="@string/item_cuenta" />
        <item
            android:id="@+id/item_categorias"
            android:icon="@drawable/categorias"
            android:title="@string/item_categorias" />
        <item
            android:id="@+id/item_pedidos"
            android:icon="@drawable/open_box_pedidos"
            android:title="@string/item_pedidos" />
        <item
            android:id="@+id/item_productos"
            android:icon="@drawable/email"
            android:title="@string/item_productos" />
        <item
            android:id="@+id/item_cerrarsesion"
            android:icon="@mipmap/ic_back_close"
            android:title="@string/item_cerrarsesion" />
        <item
            android:id="@+id/item_configuracion"
            android:visible="false"
            android:icon="@drawable/configuracion"
            android:title="@string/item_configuracion" />
    </group>

</menu>